=== Version 3.6.10 build ===
- Added self-enrollment option to groups (Enterprise version)
- Fixed setting file encodings to UTF-IMAP even when UTF-8 is selected

=== Version 3.6.9 build 11018 ===
- Added course lessons schedule display in course info page
- Added copy blocks order from lesson X in module administrator_tools
- Added categories path for lessons in users reports in lesson tab
- Added custom user profile fields for user triggering the event notifications
- Removed unit options that where meaningless for SCORM, when editing such content
- Fixed deleting glossary entries deletes files instead
- Fixed username format in course/lesson info pages
- Fixed issue EF-567 about logging out using facebook connect
- Fixed EF-617 where glossary added an extra space in unit data

=== Version 3.6.9 build 10905 ===
- Fixed potential security issue while including javascript files
- Added comments field to user's profile page
- Added option for not allowing students to send messages
- Added "AND" mode for "multiple/many" questions
- Added check in landing page in case of inactive module
- Added code for sorting files in editor popup windows
- Added a check for possible existing token in api2
- Added option for deleting old api tokens (over one month) in maintenance
- Changed "name/surname" constants to "first name/last name"
- Changed lesson selectbox to autocomplete field in copy from another lesson
- Tests info in excel export of lesson reports no longer truncates questions
- You can no longer create subforums in locked forums
- A user who is reassigned to a course/lesson, now retains the completion date, if there is one
- Recurring payments option in courses/lessons no longer shows up when payments are disabled
- Courses in user reports now sort by course order by default
- Course/lesson completion status in pdf reports displays even if a completion date does not exist
- Extended api to consider custom user profile fields for creating user